# solveit-modal

./: CHANGELOG.md  CONTROLLER.ipynb  README.md  core.html  core.html.md  gpu.html  gpu.html.md  index.html  index.html.md  ipyfernel.html  ipyfernel.html.md  kernel.html  kernel.html.md  modal.html  modal.html.md  pyproject.toml  robots.txt  sandbox.html  sandbox.html.md  search.json  sitemap.xml
nbs/: 00_core.ipynb  01_modal.ipynb  01_sandbox.ipynb  02_ipyfernel.ipynb  02_kernel.ipynb  03_gpu.ipynb  index.ipynb  nbdev.yml
solveit_modal/: _modidx.py  core.py  gpu.py  ipyfernel.py  kernel.py  modal.py  sandbox.py
